--- a/paper/aux/commands.tex
+++ b/paper/aux/commands.tex
@@ -81,6 +81,9 @@
 \newcommand{\SUD}{\triangle^{\mathrm{SU}}}
 \newcommand{\LAD}{\triangle^{\mathrm{LA}}}
 
+%Strong complementary pairs
+\newcommand{\SCP}{\mathrm{SCP}}
+
 %Category
 \newcommand{\PolySub}{\mathsf{Poly}}
 
@@ -102,6 +105,8 @@
 \newcommand{\EC}{\mathcal{E}} %essential complimentary partitions
 \newcommand{\OP}{\triangle} %ordered partitions
 \newcommand{\BT}{\mathcal{B}} %bipartite trees
+
+\newcommand{\ssm}{\smallsetminus} % small set minus
 
 %Hyperplane arrangements
 \renewcommand{\b}[1]{\boldsymbol{#1}} % bold
@@ -199,7 +204,6 @@
 \newcommand{\set}[2]{\left\{ #1 \;\middle|\; #2 \right\}} % set notation
 \newcommand{\eqdef}{\mbox{\,\raisebox{0.2ex}{\scriptsize\ensuremath{\mathrm:}}\ensuremath{=}\,}} % :=
 \newcommand{\defn}[1]{\textsl{\darkblue #1}} % emphasis of a definition
-\newcommand{\ssm}{\smallsetminus} % small set minus
 
 % ----------------------------------------------------------------
 
