--- a/paper/sec/bijections.tex
+++ b/paper/sec/bijections.tex
@@ -988,6 +988,30 @@ Then,
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+\subsubsection{Some consequences}
+
+Combinining \cref{prop:subset shift to shift bijection} and \cref{prop: shift SUD and SUD are equal}, we obtain that
+
+\begin{theorem}
+    Subset shift $\SU$ and $\SUD$ coincide.
+\end{theorem}
+
+This
+\begin{enumerate}
+    \item resolves a conjecture of \cite{LA21} for the operahedra, and a conjecture of \cite{MazuirLA22} for the multiplihedra;
+    \item provides a new proof that all known diagonals on the associahedra coincide \cite{saneblidzeComparingDiagonalsAssociahedra2022}
+\end{enumerate}
+Moreover, this allows us to obtain alternative descriptions of all four operadic diagonals, in particular
+\begin{enumerate}
+    \item subset shift and shift definitions of $\LA$ diagonal,
+    \item matrix description of $\LA$ diagonal,
+    \item conjectural description as subdivision of the cube [...]
+\end{enumerate}
+The next subsection is devoted to such a translation. 
+One could hope for similar results in the case of the freehedra [REFS].
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
 \subsubsection{Shifts Under the Face Poset Isomorphism}
 
 \begin{lemma}
